work/20230216/prac/ingress/diff-fqdn-multi-host/myapp-svc-np2-diff-fqdn-multi-host.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-mhost-np2
spec:
  type: NodePort
  selector:
    app: myapp-rs-mhost-web2
  ports:
  - port: 80
    targetPort: 8080
