work/20230216/prac/ingress/diff-fqdn-multi-host/myapp-ing-diff-fqdn-multi-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ing-mhost
spec:
  defaultBackend:
    service:
      name: myapp-svc-np
      port:
        number: 80
  rules:
  - host: web1.example.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp-svc-mhost-np1
            port:
              number: 80
  - host: web2.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp-svc-mhost-np2
            port:
              number: 80
